k8s/kubeinvaders/06-deployment.yaml
---
# Source: kubeinvaders/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeinvaders
  namespace: kubeinvaders
  labels:
    app.kubernetes.io/name: kubeinvaders
    helm.sh/chart: kubeinvaders-0.1.0
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubeinvaders
      app.kubernetes.io/instance: kubeinvaders
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubeinvaders
        app.kubernetes.io/instance: kubeinvaders
    spec:
      containers:
        - env:
          - name: ROUTE_HOST
            value: "kubeinvaders.local"
          - name: NAMESPACE
            value: guestbook
          - name: TOKEN
            valueFrom:
              secretKeyRef:
                key: token
                name: kubeinvaders-token
          - name: HITSLIMIT
            value: "1"
          - name: ALIENPROXIMITY
            value: "15"
          - name: UPDATETIME
            value: "1"
          name: kubeinvaders
          image: "registry:5000/luckysideburn/kubeinvaders:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
