k8s/kubeinvaders/05-service.yaml
---
# Source: kubeinvaders/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeinvaders
  namespace: kubeinvaders
  labels:
    app.kubernetes.io/name: kubeinvaders
    helm.sh/chart: kubeinvaders-0.1.0
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kubeinvaders
    app.kubernetes.io/instance: kubeinvaders
