k8s/kubeinvaders/07-ingress.yaml
---
# Source: kubeinvaders/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeinvaders
  namespace: kubeinvaders
  labels:
    app.kubernetes.io/name: kubeinvaders
    helm.sh/chart: kubeinvaders-0.1.0
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "chart-example.local"
      secretName: chart-example-tls
  rules:
    - host: "kubeinvaders.local"
      http:
        paths:
          - path: /
            backend:
              serviceName: kubeinvaders
              servicePort: http
